[package]
name = "hplog"
version = "0.1.0"
edition = "2021"
description = "Block-indexed, dictionary-compressed log file format with instant time-range seeking"
license = "Apache-2.0"
keywords = ["logging", "compression", "indexing", "observability", "structured-logs"]
categories = ["command-line-utilities", "compression", "encoding"]

[[bin]]
name = "hplog"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
zstd = "0.13"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crc32fast = "1"
memmap2 = "0.9"
rayon = "1"
